# Gradio_MOS_template

./: .gitignore  README.md  main.py  main2.py  pages.py  pyproject.toml  res.txt  utils.py  webpage.py
analysis/: analysis.py  dnsmos_analysis.py  qmos_analysis.py
config/: default.yaml  finnish_qmos.yaml  finnish_test.yaml  mos.yaml  swedish_test.yaml
css/: style.css  style2.css
pages/: english.py  finnish.py  norwegian.py  swedish.py
test_list_builders/google_drive/: generate.py
test_list_builders/google_drive/config/: config_finnish.yaml  finnish.yaml
test_list_builders/local_fs/: generate.py
test_list_builders/local_fs/config/: swedish.yaml
test_list_builders/metalst/: perso_eval.meta.lst  sv_cv_eval.meta.lst
test_list_builders/web_server/: generate.py
test_list_builders/web_server/config/: finnish.yaml
test_lists/: example.json
