[project]
name = "gradio-mos-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google>=3.0.0",
    "google-api-python-client>=2.178.0",
    "google-auth-oauthlib>=1.2.2",
    "gradio==5.35.0",
    "hydra-core>=1.3.2",
]
